--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "go",
             "request": "launch",
             "mode": "test",
-            "program": "${workspaceRoot}/scanner"
+            "program": "${workspaceRoot}/parser"
         },
         {
             "name": "Launch test function",
