--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,17 +6,20 @@
             "type": "go",
             "request": "launch",
             "mode": "test",
-            "program": "${workspaceRoot}/parser"
+            "program": "${workspaceRoot}/semanticAnalyser",
+            "env": {
+
+            }
         },
         {
             "name": "Launch test function",
             "type": "go",
             "request": "launch",
             "mode": "test",
-            "program": "${workspaceRoot}/scanner",
+            "program": "${workspaceRoot}/parser",
             "args": [
                 "-test.run",
-                "MyTestFunction"
+                "TestAnalzingCorrectPrograms"
             ]
         },
         {
