--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,8 +1,9 @@
 {
     "version": "0.2.0",
     "configurations": [
+
         {
-            "name": "Launch test package",
+            "name": "Launch sem-analyser tests",
             "type": "go",
             "request": "launch",
             "mode": "test",
@@ -10,17 +11,6 @@
             "env": {
 
             }
-        },
-        {
-            "name": "Launch test function",
-            "type": "go",
-            "request": "launch",
-            "mode": "test",
-            "program": "${workspaceRoot}/parser",
-            "args": [
-                "-test.run",
-                "TestAnalzingCorrectPrograms"
-            ]
         },
         {
             "name": "Launch",
