--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,16 @@
             }
         },
         {
+            "name": "Launch parser tests",
+            "type": "go",
+            "request": "launch",
+            "mode": "test",
+            "program": "${workspaceRoot}/parser",
+            "env": {
+
+            }
+        },
+        {
             "name": "Launch sem-analyser tests",
             "type": "go",
             "request": "launch",
