--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,16 +11,31 @@ jobs:
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
 
-    #### TEMPLATE_NOTE: go expects specific checkout path representing url
-    #### expecting it in the form of
-    ####   /go/src/github.com/circleci/go-tool
-    ####   /go/src/bitbucket.org/circleci/go-tool
+    environment:
+      TEST_RESULTS: /tmp/test-results
+
     working_directory: /go/src/github.com/carlcui/expressive
     steps:
       - checkout
 
+      - run: mkdir -p $TEST_RESULTS
+
+      - run: go get github.com/jstemmer/go-junit-report
+
       # specify any bash command here prefixed with `run: `
       - run: go get -v ./...
       - run: go test -v ./...
+
+      - run:
+          name: Run unit tests
+          command: |
+            trap "go-junit-report <${TEST_RESULTS}/go-test.out > ${TEST_RESULTS}/go-test-report.xml" EXIT
+            go test -v ./... | tee ${TEST_RESULTS}/go-test.out
+
+      - store_artifacts:
+          path: /tmp/test-results
+          destination: raw-test-output
+
+      - store_test_results:
+          path: /tmp/test-results
