--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
     docker:
       # specify the version
       - image: circleci/golang:1.8
+      - image: nwtgck/llvm:5.0.0
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -31,6 +32,17 @@ jobs:
           command: |
             trap "go-junit-report <${TEST_RESULTS}/go-test.out > ${TEST_RESULTS}/go-test-report.xml" EXIT
             go test -v ./... | tee ${TEST_RESULTS}/go-test.out
+
+      - run:
+          name: Build expressive
+          command: |
+            bash build.sh
+
+      - run:
+          name: e2e tests
+          command: |
+            expressive -d ./tests -f test1.exp --outDir ./dist
+            lli dist/test1.s
 
       - store_artifacts:
           path: /tmp/test-results
