--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
           name: e2e tests
           command: |
             expressive -d ./tests -f test1.exp --outDir ./dist
-            lli dist/test1.s
+            lli-5.0.0 dist/test1.s
 
       - store_artifacts:
           path: /tmp/test-results
