--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,7 @@
             "request": "launch",
             "mode": "test",
             "program": "${workspaceRoot}/parser",
+            "backend": "native",
             "env": {
 
             }
