--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,8 @@
 {
     "version": "0.2.0",
     "configurations": [
+
+
         {
             "name": "Launch scanner tests",
             "type": "go",
@@ -9,18 +11,21 @@
             "program": "${workspaceRoot}/scanner",
             "env": {
 
-            }
+            },
+            "args": [
+                "-test.run"
+            ]
         },
         {
             "name": "Launch parser tests",
             "type": "go",
             "request": "launch",
             "mode": "test",
-            "program": "${workspaceRoot}/parser",
-            "backend": "native",
-            "env": {
-
-            }
+            "program": "${workspaceFolder}/parser",
+            "args": [
+                "-test.run",
+                "TestParsingWhileStmt$"
+            ]
         },
         {
             "name": "Launch sem-analyser tests",
@@ -30,7 +35,10 @@
             "program": "${workspaceRoot}/semanticAnalyser",
             "env": {
 
-            }
+            },
+            "args": [
+                "-test.run"
+            ]
         },
         {
             "name": "Launch codegen tests",
@@ -40,7 +48,10 @@
             "program": "${workspaceRoot}/codegen",
             "env": {
 
-            }
+            },
+            "args": [
+                "-test.run"
+            ]
         },
         {
             "name": "Launch",
