Switch to llir/llvm library for interfacing llvm IR
- Still need to fix global variable declarations (strings)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -45,12 +45,10 @@
             "type": "go",
             "request": "launch",
             "mode": "test",
-            "program": "${workspaceRoot}/codegen",
-            "env": {
-
-            },
+            "program": "${workspaceFolder}/codegen",
             "args": [
-                "-test.run"
+                "-test.run",
+                "TestCodegen"
             ]
         },
         {
